# iota_c_templates

./: LICENSE  README.md
bazel_template/: BUILD  WORKSPACE  my_app.c
cmake_template/: CMakeLists.txt  config.h  my_app.c
